# agentic-api

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Makefile  README.md  mkdocs.yaml  pyproject.toml
.github/workflows/: release-crates.yml  rust.yml
config/: agentic-api.yaml
crates/agentic-core/: Cargo.toml
crates/agentic-core/benches/: benches.rs  storage_concurrent.rs
crates/agentic-core/src/: config.rs  error.rs  lib.rs  proxy.rs  types.rs
crates/agentic-core/src/events/: normalize.rs  types.rs
crates/agentic-core/src/executor/: accumulator.rs  engine.rs  error.rs  gateway.rs  mod.rs  persist.rs  request.rs  upstream.rs
crates/agentic-core/src/executor/modes/: conversation.rs  response.rs
crates/agentic-core/src/storage/: conversation.rs  pool.rs
crates/agentic-core/src/storage/models/: item.rs
crates/agentic-core/src/storage/types/: item.rs  response.rs
crates/agentic-core/src/store/: mod.rs  ogx.rs
crates/agentic-core/src/tool/: function.rs  handler.rs  mod.rs  normalize.rs  registry.rs  web_search.rs
crates/agentic-core/src/types/: event.rs  io.rs  mod.rs  request_response.rs
crates/agentic-core/src/types/io/: input.rs  mod.rs  output.rs  tools.rs
crates/agentic-core/src/types/tools/: mod.rs  params.rs
crates/agentic-core/src/utils/: common.rs
crates/agentic-core/src/vector_search/: mod.rs  ogx.rs  types.rs
crates/agentic-core/tests/: accumulator_cassette_test.rs  event_normalizer_test.rs  stateful_conversation_integration.rs  stateful_responses_integration.rs  storage_integration.rs  tool_normalization_test.rs  web_search_tool_test.rs
crates/agentic-core/tests/cassettes/: README.md  record_cassette.py  record_reasoning_cassettes.sh  record_text_only_cassettes.sh  record_tool_call_cassettes.sh
crates/agentic-core/tests/cassettes/reasoning/responses/: reasoning-single-Qwen-Qwen3-30B-A3B-FP8-nonstreaming.yaml  reasoning-single-Qwen-Qwen3-30B-A3B-FP8-streaming.yaml  reasoning-single-openai-gpt-oss-20b-nonstreaming.yaml  reasoning-single-openai-gpt-oss-20b-streaming.yaml
crates/agentic-core/tests/cassettes/text_only/conversation/: conv-store-false-followup-gpt-4o-nonstreaming.yaml
crates/agentic-core/tests/cassettes/tool_calls/: tool-call-auto-Qwen-Qwen3-30B-A3B-FP8-nonstreaming.yaml  tool-call-auto-Qwen-Qwen3-30B-A3B-FP8-streaming.yaml  tool-call-named-Qwen-Qwen3-30B-A3B-FP8-nonstreaming.yaml  tool-call-named-Qwen-Qwen3-30B-A3B-FP8-streaming.yaml  tool-call-none-Qwen-Qwen3-30B-A3B-FP8-nonstreaming.yaml  tool-call-none-Qwen-Qwen3-30B-A3B-FP8-streaming.yaml  tool-call-required-Qwen-Qwen3-30B-A3B-FP8-nonstreaming.yaml  tool-call-required-Qwen-Qwen3-30B-A3B-FP8-streaming.yaml  tools.json
crates/agentic-core/tests/cassettes/tool_calls/multi_turn/: openai_responses_tool_calls_3turn.yaml  openai_responses_tool_calls_3turn_streaming.yaml  openai_responses_tool_calls_5turn.yaml  openai_responses_tool_calls_branch.yaml  openai_responses_tool_calls_parallel.yaml  openai_responses_tool_calls_tool_output_only.yaml  pipeline_tool_outputs.json  pipeline_tools.json  record.sh  responses_tool_calls_3turn.yaml  responses_tool_calls_3turn_streaming.yaml  responses_tool_calls_5turn.yaml  responses_tool_calls_branch.yaml  responses_tool_calls_parallel.yaml  responses_tool_calls_tool_output_only.yaml
crates/agentic-core/tests/cassettes/web_search/: gpt_oss_web_search_nonstreaming.yaml  gpt_oss_web_search_streaming.yaml  tools.json
crates/agentic-core/tests/support/: mod.rs
crates/agentic-server/: Cargo.toml
crates/agentic-server/benches/: benches.rs  gateway_bench.rs  proxy_bench.rs
crates/agentic-server/examples/: stateful_gateway.rs
crates/agentic-server/src/: app.rs  handler.rs  main.rs  server.rs
crates/agentic-server/src/handler/http/: responses.rs
crates/agentic-server/src/handler/websocket/: responses.rs
crates/agentic-server/tests/: agentic_loop_test.rs  conversations_test.rs  cors_test.rs  health_test.rs  integration_test.rs  proxy_test.rs  responses_test.rs  responses_websocket_test.rs  state_hydration_test.rs
crates/agentic-server/tests/cassettes/: record_file_search_cassettes.py
crates/agentic-server/tests/cassettes/file_search/: vllm-file-search-openai-gpt-oss-20b.json
crates/agentic-server/tests/common/: mod.rs
crates/agentic-server/tests/integration/: ogx-config.yaml  run.sh
docs/: index.md
docs/adr/: ADR-04_response_token_cache.md
docs/api/: index.md
docs/architecture/: index.md
docs/design/: codex-integration.md
scripts/: test_shadow_conversation.py  test_shadow_conversation_v2.py
src/: config.rs  error.rs  lib.rs  main.rs
src/agentic_api/config/: runtime.py
src/agentic_api/core/: composer.py  engine.py  file_search.py  models.py  normalizer.py  pipeline.py  sse.py  translator.py
src/agentic_api/database/: __init__.py  conversation.py  db_engine.py  file.py  item.py  response.py  schema.py  session.py  vector_search.py  vector_store.py  vector_store_file.py
src/agentic_api/entrypoints/: app.py  cli.py
src/agentic_api/routers/: files.py  responses.py  vector_stores.py
src/agentic_api/store/: chunker.py  conversation.py  embedding_client.py  file_store.py  ranker.py  rehydration.py  response.py  translator.py  vector_store.py
src/agentic_api/types/: files.py  responses.py  vector_stores.py
src/agentic_api/utils/: common.py  exceptions.py  failures.py
src/filters/: agentic_loop.rs  mod.rs  responses_proxy.rs  state_hydration.rs  tool_dispatch.rs
tests/: conftest.py  proxy_test.rs  test_conversation_api.py  test_responses_api.py  test_stateful_responses.py  utils.py
tests/cassettes/: record_cassette.py  record_text_only_cassettes.sh
tests/common/: mod.rs
tests/core/: test_composer.py  test_file_search.py  test_normalizer.py  test_pipeline.py  test_translator.py
tests/store/: test_chunker.py  test_conversation_store.py  test_file_store.py  test_ranker.py  test_response_store.py  test_translator.py  test_vector_search.py
tests/utils/: __init__.py  builders.py  gateway.py  replay.py
(+10 files in other folders)
