[package]
name = "agentic-api"
version = "0.1.0"
edition = "2024"
description = "Stateful API logic for agentic applications using vLLM"
license = "Apache-2.0"
repository = "https://github.com/vllm-project/agentic-api"

[dependencies]
async-trait = "0.1"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
http = "1"
praxis = { git = "https://github.com/praxis-proxy/praxis.git", rev = "2f7ea31" }
praxis-proxy-core = { git = "https://github.com/praxis-proxy/praxis.git", rev = "2f7ea31" }
praxis-proxy-filter = { git = "https://github.com/praxis-proxy/praxis.git", rev = "2f7ea31" }
reqwest = { version = "0.12", features = ["stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
axum = "0.8"
futures = "0.3"
praxis-test-utils = { git = "https://github.com/praxis-proxy/praxis.git", rev = "2f7ea31" }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full", "test-util"] }
tokio-stream = "0.1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
