[package]
name = "agentic-core"
description = "Framework-agnostic core library for agentic-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = "0.1"
bytes.workspace = true
futures.workspace = true
http.workspace = true
reqwest = { workspace = true, features = ["default-tls", "json", "stream"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["time"] }
tracing.workspace = true

[lints]
workspace = true
