[package]
name = "agentic-core"
description = "Framework-agnostic core library for agentic-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-stream.workspace = true
async-trait = "0.1"
bytes.workspace = true
either.workspace = true
futures.workspace = true
http.workspace = true
reqwest = { workspace = true, features = ["default-tls", "json", "stream"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["time"] }
tracing.workspace = true

sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "any", "migrate", "sqlite", "postgres"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7", "serde"] }

[dev-dependencies]
axum.workspace = true
criterion = { workspace = true }
serde_yaml = "0.9"
serde_yml = "0.0.12"
tokio = { workspace = true, features = ["full"] }

[[bench]]
name = "benches"
harness = false

[lints]
workspace = true
