[package]
name = "agentic-server"
description = "Standalone axum server for agentic-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agentic-core.workspace = true
axum.workspace = true
bytes.workspace = true
clap.workspace = true
http.workspace = true
reqwest = { workspace = true, features = ["json", "stream"] }
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
criterion.workspace = true
futures.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["test-util"] }
tokio-stream = "0.1"

[[bench]]
name = "proxy_bench"
harness = false

[lints]
workspace = true
