[package]
name = "agentic-server"
description = "Standalone axum server for agentic-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agentic-core.workspace = true
axum.workspace = true
bytes.workspace = true
clap.workspace = true
either.workspace = true
futures.workspace = true
http.workspace = true
reqwest = { workspace = true, default-features = false, features = ["rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
bytes.workspace = true
criterion.workspace = true
futures.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["test-util"] }
tokio-tungstenite.workspace = true
uuid = { version = "1", features = ["v7"] }

[[bench]]
name = "benches"
harness = false

[lints]
workspace = true
